--- a/static/assets/css/styles.css
+++ b/static/assets/css/styles.css
@@ -3567,3 +3567,15 @@ figure,
 	right: 24px;
 }
 }
+
+.pos-r-0 {
+	right: 0% !important;
+}
+
+.pos-l-0 {
+	left: 0% !important;
+}
+
+.pb-32 {
+	padding-bottom: 32px !important;
+}
