--- a/static/assets/css/styles.css
+++ b/static/assets/css/styles.css
@@ -3063,10 +3063,12 @@ figure,
 }
 
 .split-form .row > div .form-field .label-with-txt .view {
-	width: 25%;
+	width: max-content;
+	max-width: 25%;
 	padding: 0 0 0 10px;
+	margin-left: auto;
+	cursor: pointer;
 }
-
 
 .split-form .row > div .form-field .required-txt {
 	width: 100%;
