--- a/static/assets/css/styles.css
+++ b/static/assets/css/styles.css
@@ -2811,12 +2811,12 @@ figure,
 	-ms-flex-wrap: wrap;
 	flex-wrap: wrap;
 	padding: 0;
-	margin: 0 -6px -12px -6px;
+	margin: 0 -6px 0 -6px;
 }
 
 .sign-in-form .bottom-btns ul li {
 	width: 33.33%;
-	padding: 0 6px 12px 6px;
+	padding: 0 6px 0 6px;
 	margin: 0;
 }
 
