--- a/static/assets/css/custom-styles.css
+++ b/static/assets/css/custom-styles.css
@@ -120,6 +120,12 @@ a:focus[href^="fax:"] {
 }
 
 
+.signinli{
+	list-style: none;
+	 padding-left: 0px;
+}
+
+
 /* #Heading H1, H2, H3, H4, H5, H6, P
 ================================================== */
 
