--- a/static/assets/css/styles.css
+++ b/static/assets/css/styles.css
@@ -3047,6 +3047,25 @@ figure,
 	max-width: 19px;
 }
 
+.label-with-txt {
+	width: 100%;
+	display: -ms-flexbox;
+	display: flex;
+	-ms-flex-wrap: wrap;
+	flex-wrap: wrap;
+	align-items: center;
+	margin-bottom: 8px;
+}
+
+.view {
+	width: max-content;
+	max-width: 25%;
+	padding: 0 0 0 10px;
+	margin-left: auto;
+	cursor: pointer;
+}
+
+
 .split-form .row > div .form-field .label-with-txt {
 	width: 100%;
 	display: -ms-flexbox;
