--- a/static/assets/css/mockup.css
+++ b/static/assets/css/mockup.css
@@ -1,3 +1,15 @@
+.new_gif {
+  position: fixed;
+  z-index: 1000;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  background-color: rgb(255 255 255 / 70%);
+}
+.mw_50 {
+  max-width: 50% !important;
+}
 .design-mockup {
   overflow: hidden;
 }
