--- a/static/assets/css/styles.css
+++ b/static/assets/css/styles.css
@@ -6338,3 +6338,374 @@ calculation of the height of the owl-item that breaks page layouts
 	display: none;
 }
 }
+
+
+
+/* All - Over - Print - Backpack */
+
+
+/* Product - Details */
+.product-details {
+    width: 100%;
+    float: none;
+    display: inline-block;
+    vertical-align: top;
+    background: #F6F5FF;
+    overflow: hidden;
+    padding: 70px 0;
+}
+
+.product-details .container {
+    max-width: 950px;
+}
+
+.product-details .heading-top {
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    align-items: center;
+    padding-bottom: 40px;
+}
+
+.product-details .heading-top h2 {
+    width: 70%; 
+	font-size: 36px; 
+	color:#595A5C; 
+	line-height: 45px; 
+	letter-spacing: -0.01em;
+    padding: 0 10px 0 0;
+}
+
+.product-details .heading-top .see-more {
+    width: 30%;
+    padding: 0 0 0 10px;
+}
+
+.product-details .heading-top .see-more a {
+    float: right;
+    font-family: "Plus Jakarta Sans", sans-serif;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 20px;
+    text-decoration: underline;
+}
+
+.product-details .product-img-out { 
+	width: 100%; 
+	float: left; 
+}
+
+.product-details .product-img {
+	width: 100%;
+	float: none;
+	display: inline-block;
+	vertical-align: top;
+}
+
+.product-details .product-img .product-lrg {	
+	width: 61.70%;
+	float: left; 
+}
+
+.product-details .product-img .show {
+	width: 100%;
+	float: left; 
+	text-align: center; 
+	background: #ffffff; 
+	border-radius: 15px; 
+	padding: 35px 35px; 
+	margin: 0 0 37px 0;
+	position: relative;
+	z-index: 20;
+}
+
+.product-details .product-img .show img { 
+	max-width: 388px;
+}
+.product-details .product-img .backpack_main img { 
+	max-width: 100%;
+}
+
+.product-details .product-img .small-img {
+	width: 32.80%;
+	height: 565px; 
+	float: left; 
+	overflow-y: auto; 
+	padding: 0 20px 0 0;
+	position: relative; 
+	margin-left: 5.50%;
+}
+
+.product-details .product-img .small-container {
+	width: 100%; 
+	float: left;
+	overflow: hidden;
+	margin: 0;
+}
+
+.product-details .product-img .small-container div {
+	width: 100%;
+	position: relative;
+}
+
+.product-details .product-img .small-container .show-small-img {
+	width: 100%; 
+	float: left; 
+	border-radius: 15px 15px;
+	cursor: pointer;
+	margin: 0 0 16px 0;
+}
+
+.product-details .product-img .small-container .show-small-img:last-child { 
+	margin-bottom: 0;
+}
+
+.product-details .product-img .small-container .show-small-img:last-of-type {
+	margin-right: 0;
+}
+
+.product-details .product-img .panel-box,
+.product-details .product-img .layer-box {
+	display: none!important;
+}
+
+.product-details .product-img .bottom-btns { 
+	width: 100%;
+	float: left; 
+}
+
+.product-details .product-img .bottom-btns .btn { 
+	width: 29.10%; 
+	float: left;
+	font-size: 24px;
+	line-height: 30px;
+	letter-spacing: normal; 
+	text-transform: none;
+	padding: 20px 32px;
+}
+
+.product-details .product-img .bottom-btns .btn-dark-blue {
+	color: #ffffff;
+	background: #222244; 
+	box-shadow: none;
+}
+
+.product-details .product-img .bottom-btns .btn-dark-blue::before {
+	background: #252586;
+}
+
+.product-details .product-img .bottom-btns .btn:nth-child(even) { 
+	width: 68.65%; 
+	margin-left: 2.25%;
+}
+
+@media (min-width: 800px) {
+.product-details {
+    padding: 50px 0;
+}
+
+.product-details .container {
+    max-width: 680px;
+}
+
+.product-details .heading-top h2 {
+	font-size: 28px; 
+	line-height: 36px; 
+	letter-spacing: normal;
+}
+}
+
+@media (min-width: 700px) {
+.product-details {
+    padding: 35px 0;
+}
+
+.product-details .container {
+    max-width: 560px;
+}
+
+.product-details .heading-top {
+    padding-bottom: 26px;
+}
+
+.product-details .heading-top h2 {
+	font-size: 26px;
+	line-height: 32px;
+}
+
+.product-details .heading-top .see-more a {
+    font-size: 14px;
+    line-height: 18px;
+}
+
+.product-details .product-img .show {
+	border-radius: 15px; 
+	padding: 20px 20px; 
+	margin: 0 0 25px 0;
+	position: relative;
+	z-index: 20;
+}
+
+.product-details .product-img .small-img {
+	height: 380px; 
+	padding: 0 10px 0 0;
+}
+
+.product-details .product-img .small-container .show-small-img {
+	margin: 0 0 10px 0;
+}
+
+.product-details .product-img .product-lrg .bottom-btns { 
+	width: 100%; 
+}
+
+.product-details .product-img .product-lrg .bottom-btns .btn { 
+	width: 38%; 
+	font-size: 16px;
+	line-height: 20px;
+	padding: 16px 32px;
+	margin: 0 2% 0 0;
+}
+
+.product-details .product-img .product-lrg .bottom-btns .btn:nth-child(even) { 
+	width: 58%; 
+	margin: 0 0 0 2%; 
+}
+}
+
+@media (max-width: 1199px) {
+.product-details {
+    padding: 50px 0;
+}
+
+.product-details .container {
+    max-width: 640px;
+}
+
+.product-details .heading-top {
+    padding-bottom: 30px;
+}
+
+.product-details .heading-top h2 {
+	font-size: 28px; 
+	line-height: 36px; 
+	letter-spacing: normal;
+}
+
+.product-details .product-img .product-lrg {	
+	width: 65%;
+}
+
+.product-details .product-img .show {
+	border-radius: 15px; 
+	padding: 30px 30px; 
+	margin: 0 0 25px 0;
+}
+
+.product-details .product-img .show img { 
+	max-width: 300px;
+}
+
+.product-details .product-img .small-img {
+	width: 30%;
+	height: 440px; 
+	padding: 0 10px 0 0;
+	margin-left: 5%;
+}
+
+.product-details .product-img .bottom-btns .btn { 
+	width: 40%; 
+	font-size: 20px;
+	line-height: 24px;
+	padding: 16px 24px;
+}
+
+.product-details .product-img .bottom-btns .btn:nth-child(even) { 
+	width: 56%; 
+	margin-left: 4%;
+}
+}
+
+@media (max-width: 767px) {
+.product-details {
+	padding: 40px 0;
+}
+
+.product-details .container {
+	max-width: 540px;
+}
+
+.product-details .heading-top {
+    padding-bottom: 26px;
+}
+
+.product-details .heading-top h2 {
+	font-size: 26px; 
+	line-height: 32px; 
+	letter-spacing: normal;
+}
+
+.product-details .product-img-out { 
+	position: relative; 
+	padding: 0 0 70px 0;
+}
+
+.product-details .product-img .product-lrg {	
+	width: 100%;
+}
+
+.product-details .product-img .show {
+	padding: 20px 20px; 
+	margin: 0 0 20px 0;
+}
+
+.product-details .product-img .show img { 
+	max-width: 240px;
+}
+
+.product-details .product-img .small-img {
+	width: 100%; 
+	height: auto; 
+	overflow: inherit;
+	margin-left: 0;
+}
+
+.product-details .product-img .product-lrg .bottom-btns { 
+	width: 100%; 
+	position: absolute; 
+	bottom: 0; 
+	left: 0;
+}
+
+.product-details .product-img .product-lrg .bottom-btns .btn { 
+	width: 38%; 
+	font-size: 16px;
+	line-height: 20px;
+	padding: 16px 32px;
+	margin: 0 2% 0 0;
+}
+
+.product-details .product-img .product-lrg .bottom-btns .btn:nth-child(even) { 
+	width: 58%; 
+	margin: 0 0 0 2%; 
+}
+
+.product-details .product-img .small-container {
+	width: 100%; 
+	float: left;
+	overflow: hidden;
+	margin: 0;
+}
+
+.product-details .product-img .small-container div {
+	width: 102%; margin: 0 -1% -3% -1%;
+}
+
+.product-details .product-img .small-container .show-small-img {
+	width: 31.33%; 
+	border-radius: 10px 10px;
+	margin: 0 1% 3% 1%;
+}
+}
+
